# wmo

./: CMakeLists.txt  README.md
include/: isPower4.hpp  planes_in_air.hpp  rev_ll.hpp  reverse_num.hpp
src/: ._isPower4.cpp  ._isPower4.hpp  ._main.cpp  ._planes_in_air.cpp  ._planes_in_air.hpp  ._rev_ll.cpp  ._rev_ll.hpp  ._reverse_num.cpp  ._reverse_num.hpp  isPower4.cpp  main.cpp  planes_in_air.cpp  rev_ll.cpp  reverse_num.cpp
